# jptj

./: .env.example  .eslintrc.js  architecture.md  index.html  jest.config.js  package-lock.json  package.json  requirements.md  tsconfig.json  tsconfig.node.json  vite.config.ts
auth_frontend/: index.html  package-lock.json  package.json
auth_service/: pyproject.toml  requirements.txt
project 2/: .env  package-lock.json  package.json  tailwind.config.js
project 2/admin-backend/: Dockerfile  alembic.ini  fly.toml  pyproject.toml  requirements.txt  token.txt
project 2/admin-backend/alembic/: env.py
project 2/admin-backend/alembic/versions/: create_forum_tables.py  f9d84f69f98a_initial.py  merge_forum_tables.py
project 2/admin-backend/app/: config.py  database.py  main.py  models.py  verify_db.py
project 2/admin-backend/app/api/: auth.py  content.py  dashboard.py  users.py
project 2/admin-backend/app/api/forum/: moderation.py
project 2/admin-backend/app/middleware/: performance.py  rate_limiter.py
project 2/admin-backend/app/models/: __init__.py  admin.py  content.py  user.py
project 2/admin-backend/app/models/forum/: __init__.py  comment.py  post.py
project 2/admin-backend/app/schemas/: content.py  user.py
project 2/admin-backend/app/schemas/forum/: comment.py  post.py
project 2/admin-backend/app/scripts/: create_admin.py  create_test_forum_data.py  create_test_users.py  drop_tables.py  extract_token.py  get_token.py  process_response.py  setup_test_data.py  test_all_endpoints.py  test_forum_endpoints.py  verify_db.py
src/: env.d.ts  main.tsx  (+1 more)
(+59 files in other folders)
